# Physics-ArX

./: .gitignore  README.md  environment.yaml  test.py  train.py
Physics-based-Augmentation/Artifact-Induction/: CBCT_pCT_Artifact_adding.sh
Physics-based-Augmentation/Artifact-Induction/Cpp-Codes/AdaptiveHistogramMatching/src/: AdaptiveHistogramMatch.cxx  CMakeLists.txt
Physics-based-Augmentation/Artifact-Induction/Cpp-Codes/AddImages/src/: AddImages.cxx  CMakeLists.txt
Physics-based-Augmentation/Artifact-Induction/Cpp-Codes/ResampleImages/src/: CMakeLists.txt  ResampleImages.cxx
Physics-based-Augmentation/Artifact-Induction/Cpp-Codes/ResampleImagesFloat/src/: CMakeLists.txt  ResampleImagesFloat.cxx
Physics-based-Augmentation/Artifact-Induction/Cpp-Codes/RescaleImage/src/: CMakeLists.txt  RescaleImage.cxx
Physics-based-Augmentation/Geometric-Augmentations/: augmentation.py
Physics-based-Augmentation/OSSART-Reconstruction/: pCT_CBCT_Reconstruction.py
data/: base_dataset.py  cbct2ct3d_dataset.py
models/: base_model.py  networks3d.py  pix2pix3d_model.py
options/: train_options.py
preprocess/: prep_data_psCBCT_crop_borders.py  prep_test_data_pseudo_cbct_3D.py  test_pseudocbct.txt  test_pseudocbct_aapm.txt  test_pseudocbct_aapm1.txt  train_pseudocbct.txt  valid_pseudocbct.txt
results/msk_aapm_stabilized_eso4/test_latest/npz_images/: LCTSC-Test-S1-101_1_RTSTRUCTS.nrrd  LCTSC-Test-S1-101_2_RTSTRUCTS.nrrd
scripts/: test_cbct2ct3d.sh  train_cbct2ct3d.sh
statistics/: compute_dice.py  compute_dice_eso_label_1.py  compute_diff_images.py  compute_hausdorff_distances.py  compute_sCT_stats_psCBCT.py  post_processing.py  show_diff_images.py  similarity_metrics.py
util/: visualizer.py
